<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="NumOfPax">Num of Pax</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="totalBill">Total Bill: </string>
    <string name="eachPays">Each Pays: </string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>


</resources>
